# infinity-swap-contracts

./: .codecov.yml  .eslintrc.js  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  index.ts  infinity_pool.wasm  justfile  package.json  tsconfig.json
contracts/infinity-builder/: Cargo.toml
contracts/infinity-builder/schema/: infinity-builder.json
contracts/infinity-builder/src/: error.rs  execute.rs  instantiate.rs  lib.rs  msg.rs  query.rs  state.rs
contracts/infinity-factory/: Cargo.toml
contracts/infinity-factory/schema/: infinity-factory.json
contracts/infinity-factory/src/: error.rs  execute.rs  helpers.rs  instantiate.rs  lib.rs  migrate.rs  msg.rs  query.rs  state.rs  sudo.rs
contracts/infinity-global/: Cargo.toml
contracts/infinity-global/schema/: infinity-global.json
contracts/infinity-global/src/: constants.rs  execute.rs  helpers.rs  instantiate.rs  lib.rs  migrate.rs  msg.rs  query.rs  state.rs  sudo.rs
contracts/infinity-index/: Cargo.toml
contracts/infinity-index/schema/: infinity-index.json
contracts/infinity-index/src/: error.rs  execute.rs  helpers.rs  instantiate.rs  lib.rs  migrate.rs  msg.rs  query.rs  state.rs
contracts/infinity-pair/: Cargo.toml
contracts/infinity-pair/schema/: infinity-pair.json
contracts/infinity-pair/src/: constants.rs  error.rs  events.rs  execute.rs  helpers.rs  instantiate.rs  lib.rs  math.rs  migrate.rs  msg.rs  pair.rs  query.rs  state.rs
contracts/infinity-pool/: Cargo.toml
contracts/infinity-pool/examples/: schema.rs
contracts/infinity-pool/schema/: execute_msg.json  instantiate_msg.json  nft_swap.json  pool_info.json  pools_by_id_response.json  pools_response.json  query_msg.json  swap_params.json  swap_response.json
contracts/infinity-pool/src/: error.rs  execute.rs  helpers.rs  instantiate.rs  lib.rs  msg.rs  pool.rs  query.rs  state.rs  swap_processor.rs  testing.rs
contracts/infinity-pool/src/testing/: helpers.rs  setup.rs  tests.rs
contracts/infinity-pool/src/testing/helpers/: deposit.rs  execute_messages.rs  fixtures.rs  msg.rs  nft_functions.rs  pool_functions.rs  setup_swap_pool.rs  sim_messages.rs  swap_functions.rs  utils.rs  validation.rs
contracts/infinity-pool/src/testing/schema/: config_response.json  pool_nft_swap.json
contracts/infinity-pool/src/testing/setup/: setup_accounts.rs  setup_contracts.rs  setup_infinity_pool.rs  setup_marketplace.rs  templates.rs
contracts/infinity-pool/src/testing/tests/: execute_tests.rs  index_tests.rs  message_tests.rs  multitest.rs  pool_tests.rs  query_tests.rs  sim_swap_nfts_for_tokens.rs  sim_tests.rs  swap_tests .rs  swap_tests.rs  test_helpers.rs  unit_tests.rs
contracts/infinity-router/: Cargo.toml
contracts/infinity-router/schema/: infinity-router.json
contracts/infinity-router/src/: buy_offer.rs  error.rs  execute.rs  helpers.rs  instantiate.rs  lib.rs  msg.rs  query.rs  reply.rs  sell_offer.rs  state.rs
contracts/infinity-router/src/nfts_for_tokens_iterators/: iter.rs  mod.rs  nfts_for_tokens_infinity.rs  types.rs
contracts/infinity-router/src/tokens_for_nfts_iterators/: iter.rs  mod.rs  tokens_for_nfts_infinity.rs  types.rs
e2e/: Cargo.toml
e2e/src/: lib.rs
e2e/src/helpers/: chain.rs  constants.rs  fixtures.rs  instantiate.rs  mod.rs  nft.rs  pool.rs
e2e/src/tests/: direct_swap_nfts_for_tokens_test.rs  direct_swap_tokens_for_specific_nfts.rs  mod.rs  pool_test.rs  pool_tests.rs  swap_nfts_for_tokens_test.rs  swap_tests.rs  swap_tokens_for_any_nfts.rs  swap_tokens_for_specific_nfts.rs
test/e2e/: Cargo.toml
test/e2e/src/helpers/: chain.rs  constants.rs  fixtures.rs  instantiate.rs  mod.rs  nft.rs  pool.rs
test/e2e/src/tests/: create_pool.rs  direct_swap_nfts_for_tokens.rs  direct_swap_nfts_for_tokens_test.rs  direct_swap_tokens_for_specific_nfts.rs  large.rs  large_nfts_for_tokens.rs  large_pool.rs  large_tokens_for_nfts.rs  mod.rs  pool_tests.rs  swap_nfts_for_tokens.rs  swap_nfts_for_tokens_test.rs  swap_tokens_for_any_nfts.rs  swap_tokens_for_specific_nfts.rs
test/unit/: Cargo.toml
test/unit/src/: helpers.rs  lib.rs  setup.rs
test/unit/src/helpers/: constants.rs  fixtures.rs  marketplace_functions.rs  mod.rs  nft_functions.rs  pool_functions.rs  swap_functions.rs  tracer_functions.rs  utils.rs
test/unit/src/infinity_global_tests/: mod.rs
test/unit/src/infinity_marketplace_adapter_tests/: mod.rs  sim_tests.rs
test/unit/src/infinity_marketplace_adapter_tests/sim_tests/: mod.rs  sim_swap_nfts_for_tokens.rs  sim_swap_tokens_for_any_nfts.rs  sim_swap_tokens_for_specific_nfts.rs
test/unit/src/infinity_marketplace_adapter_tests/swap_tests/: mod.rs  swap_nfts_for_tokens.rs  swap_tokens_for_any_nfts.rs  (+1 more)
test/unit/src/infinity_pool_tests/: depost_nfts_tests.rs  mod.rs  set_is_active_tests.rs  update_pool_config_tests.rs  withdraw_nfts_tests.rs  withdraw_tokens_tests.rs
test/unit/src/infinity_shared_tests/: unit_tests.rs
test/unit/src/infinity_swap_tests/: multitest.rs  query_tests.rs
test/unit/src/setup/: mod.rs  setup_accounts.rs  setup_contracts.rs  setup_infinity_contracts.rs  setup_infinity_marketplace_adapter.rs  setup_infinity_swap.rs  setup_marketplace.rs  templates.rs
test/unit/src/tests/: multitest.rs  pool_tests.rs  query_tests.rs
test/unit/src/tracer_tests/: mod.rs
unit-tests/: Cargo.toml
unit-tests/src/: lib.rs
unit-tests/src/helpers/: constants.rs  fixtures.rs  marketplace_functions.rs  mod.rs  nft_functions.rs  pair_functions.rs  swap_functions.rs  utils.rs
unit-tests/src/infinity_factory_tests/: mod.rs  sim_pair_quotes_factory_tests.rs  sudo_tests.rs
unit-tests/src/infinity_global_tests/: message_tests.rs
unit-tests/src/infinity_pair_tests/: deposit_assets_tests.rs  mod.rs  nft_pair_swap_tests.rs  pair_creation_tests.rs  pair_quote_tests.rs  token_pair_swap_tests.rs  trade_pair_swap_tests.rs
unit-tests/src/infinity_router_tests/: mod.rs  nfts_for_tokens_router_tests.rs  sim_pair_quotes_router_tests.rs  tokens_for_nfts_router_tests.rs
unit-tests/src/setup/: mod.rs  setup_accounts.rs  setup_contracts.rs  setup_infinity_contracts.rs  templates.rs
(+137 files in other folders)
