[workspace]
members = ["contracts/*", "packages/*", "unit-tests"]

[workspace.package]
version     = "0.1.0"
edition     = "2021"
repository  = "https://github.com/tasiov/infinity-swap"
description = "A set of contracts and libraries for the Infinity Swap project."
authors     = ["Tasio tasiovictoria@ujulabs.com"]
license     = "BUSL-1.1"

[workspace.dependencies]
infinity-builder = { path = "./contracts/infinity-builder", features = [
    "library",
] }
infinity-factory = { path = "./contracts/infinity-factory", features = [
    "library",
] }
infinity-global = { path = "./contracts/infinity-global", features = [
    "library",
] }
infinity-index = { path = "./contracts/infinity-index", features = ["library"] }
infinity-pair = { path = "./contracts/infinity-pair", features = ["library"] }
infinity-router = { path = "./contracts/infinity-router", features = [
    "library",
] }
infinity-shared = { path = "./packages/infinity-shared" }

stargaze-fair-burn        = { version = "1.0.4", features = ["library"] }
stargaze-royalty-registry = { version = "0.3.0", features = ["library"] }
sg721-base                = { version = "2.4.0", features = ["library"] }
sg721                     = { version = "2.4.0", features = ["library"] }

sg-marketplace-common = { git = "https://github.com/public-awesome/marketplace", rev = "02be12b82ceb88188b227cc73d0c2631aaa201c0", package = "sg-marketplace-common" }
sg-marketplace = { git = "https://github.com/public-awesome/marketplace", rev = "6aef3689ebf9b7d47805a40111f7d6c9dda8a6b7", package = "sg-marketplace", features = [
    "library",
] }

cosmwasm-std = { version = "1.3.1", features = [
    "staking",
    "stargate",
    "ibc3",
    "cosmwasm_1_1",
    "cosmwasm_1_2",
    "cosmwasm_1_3",
] }

cosmwasm-schema  = "1.3.1"
cosmwasm-storage = "1.3.1"
cw-storage-macro = "1.1.0"
cw-storage-plus  = "1.1.0"
cw-controllers   = "1.1.0"
cw2              = "1.1.0"
cw721            = "0.18.0"
cw721-base       = "0.18.0"
cw-utils         = "0.16.0"
cw-address-like  = "1.0.4"

sg1            = "2.3.0"
sg2            = "2.3.0"
sg-std         = "2.3.0"
sg-index-query = "0.1.1"

sha2        = "0.10"
thiserror   = "1.0.31"
anyhow      = "1.0.51"
proc-macro2 = "1.0"
quote       = "1.0"
syn         = { version = "1.0", features = ["derive"] }

# dev-dependencies
itertools       = "0.10.5"
cw-multi-test   = "0.16.0"
sg-multi-test   = { version = "2.3.0" }
test-suite      = { version = "2.3.0" }
base-minter     = { version = "2.3.0" }
base-factory    = { version = "2.3.0" }
vending-minter  = { version = "2.3.0" }
vending-factory = { version = "2.3.0" }
mockall         = "0.11.4"
cosm-orc        = { version = "3.0.1" }
cosm-tome       = { version = "0.1.1" }
assert_matches  = "1.5"
serde           = { version = "1.0", default-features = false, features = ["derive"] }
serde_json      = "1.0"
env_logger      = "0.9.0"
test-context    = "0.1.4"
once_cell       = "1.13.0"
rand            = "0.8"

[profile.release]
rpath            = false
lto              = true
overflow-checks  = true
opt-level        = 3
debug            = false
debug-assertions = false
