[package]
name       = "infinity-builder"
version    = "0.1.0"
edition    = { workspace = true }
repository = { workspace = true }
license    = { workspace = true }

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "schema"
path = "src/bin/schema.rs"
doc  = false

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
infinity-factory = { workspace = true }
infinity-global  = { workspace = true }
infinity-index   = { workspace = true }
infinity-pair    = { workspace = true }
infinity-router  = { workspace = true }
infinity-shared  = { workspace = true }
cosmwasm-std     = { workspace = true }
cosmwasm-schema  = { workspace = true }
cw-storage-plus  = { workspace = true }
cw-storage-macro = { workspace = true }
cw-utils         = { workspace = true }
cw2              = { workspace = true }
thiserror        = { workspace = true }
sg-std           = { workspace = true }
sha2             = { workspace = true }
