[package]
name = "infinity-index"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
# infinity-macros = { workspace = true }
infinity-shared = { workspace = true }
infinity-global = { workspace = true }
# infinity-swap = { workspace = true }
# infinity-pool = { workspace = true }
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
cw-storage-macro = { workspace = true }
# cosmwasm-storage = { workspace = true }
# cw-utils = { workspace = true }
cw2 = { workspace = true }
thiserror = { workspace = true }
# anyhow = { workspace = true }
# sg1 = { workspace = true }
# sg2 = { workspace = true }
# sg721-base = { workspace = true }
# sg721 = { workspace = true }
sg-std = { workspace = true }
# sg-marketplace = { workspace = true }
# sg-marketplace-common = { workspace = true }
sha2 = { workspace = true }
# cw721-base = { workspace = true }
# cw721 = { workspace = true }
