[package]
name = "infinity-pool"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/tasiov/infinity-pool"
description = "An implementation of the Sudo Swap protocol written for CosmWasm"
license = "AGPL-3.0-only"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.7
"""

[dependencies]
cosmwasm-std = "1.1.5"
cosmwasm-schema = { version = "1.1.5" }
cosmwasm-storage = { version = "1.0.0" }
cw-storage-plus = "0.16.0"
cw-utils = "0.16.0"
cw2 = "0.16.0"
thiserror = { version = "1.0.31" }
# cw20 = "0.16.0"
# cw721 = "0.16.0"
# cw721-base = { version = "0.16.0", features = ["library"] }
# schemars =  "0.8.11"
# serde = { version =  "1.0.145", default-features = false, features = ["derive"] }
# sg721-base = { version = "0.21.5", features = ["library"] }
# sg721 = { version = "0.21.5", features = ["library"] }
# sg-std = "0.21.5"
# sg1 = "0.21.5"
# sg2 = "0.21.5"
# sg-controllers = "0.21.5"
# semver = "1"

# [dev-dependencies]
# cute = "0.3.0"
# vending-factory = { version = "0.21.5"}
# vending-minter = { version = "0.21.5"}
# cw-multi-test = { version = "0.16.0" }
# sg-multi-test = "0.21.5"
# base-minter = "0.21.5"

# [profile.release]
# rpath = false
# lto = true
# overflow-checks = true
# opt-level = 3
# debug = false
# debug-assertions = false
