[package]
name = "infinity-pool"
version    = { workspace = true }
edition    = { workspace = true }
repository = { workspace = true }
license    = { workspace = true }

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.7
"""

[dependencies]
cosmwasm-std = "1.1.9"
cosmwasm-schema = { version = "1.1.9" }
cosmwasm-storage = { version = "1.0.0" }
cw-storage-plus = "0.16.0"
cw-utils = "0.16.0"
cw2 = "0.16.0"
thiserror = { version = "1.0.31" }
anyhow = "1.0.51"
sg1 = "0.21.8"
sg2 = "0.21.8"
sg721-base = { version = "0.21.8", features = ["library"] }
sg721 = { version = "0.21.8", features = ["library"] }
sg-std = "0.21.8"
sg-marketplace = { git = "https://github.com/public-awesome/marketplace", features = ["library"] }
cw721-base = { version = "0.16.0", features = ["library"] }
cw721 = "0.16.0"


[dev-dependencies]
cw-multi-test = { version = "0.16.0" }
sg-multi-test = "0.21.8"
test-suite = "0.21.8"
vending-minter = { version = "0.21.8"}
vending-factory = { version = "0.21.8"}


# [dependencies]
# cosmwasm-std = "1.1.5"
# cosmwasm-storage = { version = "1.0.0" }
# cw-storage-plus = "0.16.0"
# cw2 = "0.16.0"
# cw20 = "0.16.0"
# cw721-base = { version = "0.16.0", features = ["library"] }
# schemars =  "0.8.11"
# serde = { version =  "1.0.145", default-features = false, features = ["derive"] }
# sg721-base = { version = "0.21.8", features = ["library"] }
# sg721 = { version = "0.21.8", features = ["library"] }
# thiserror = { version = "1.0.31" }
# sg-std = "0.21.8"
# cw-utils = "0.16.0"
# sg1 = "0.21.8"
# sg2 = "0.21.8"
# sg-controllers = "0.21.8"
# semver = "1"
# cosmwasm-schema = { version = "1.1.5" }

# [dev-dependencies]
# cute = "0.3.0"
# vending-factory = { version = "0.21.8"}
# vending-minter = { version = "0.21.8"}
# cw-multi-test = { version = "0.16.0" }
# sg-multi-test = "0.21.8"
# base-minter = "0.21.8"
# test-suite = "0.21.8"
 
# [profile.release]
# rpath = false
# lto = true
# overflow-checks = true
# opt-level = 3
# debug = false
# debug-assertions = false
