[package]
name       = "infinity-router"
version    = "0.1.2"
edition    = { workspace = true }
repository = { workspace = true }
license    = { workspace = true }

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "schema"
path = "src/bin/schema.rs"
doc  = false

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
infinity-global           = { workspace = true }
infinity-index            = { workspace = true }
infinity-pair             = { workspace = true }
infinity-shared           = { workspace = true }
stargaze-royalty-registry = { workspace = true }
sg-index-query            = { workspace = true }
sg-marketplace-common     = { workspace = true }
sg-std                    = { workspace = true }
cosmwasm-std              = { workspace = true }
cosmwasm-schema           = { workspace = true }
cw-storage-plus           = { workspace = true }
cw-storage-macro          = { workspace = true }
cw-utils                  = { workspace = true }
cw2                       = { workspace = true }
thiserror                 = { workspace = true }
sha2                      = { workspace = true }
cw721-base                = { workspace = true }
cw721                     = { workspace = true }
cw-address-like           = { workspace = true }
