[package]
name       = "e2e-tests"
version    = { workspace = true }
edition    = { workspace = true }
repository = { workspace = true }
license    = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
infinity-swap = { path = "../../contracts/infinity-swap" }
sg-marketplace = { git = "https://github.com/public-awesome/marketplace", features = ["library"] }
cosmwasm-std = { workspace = true }
cw-utils = { workspace = true }
cw721-base = { workspace = true }
cw721 = { workspace = true }
sg-std = { workspace = true }
sg2 = { workspace = true }
sg721-base = { workspace = true }
sg721 = { workspace = true }
cosm-orc       = { version = "3.0.1" }
cosm-tome      = { version = "0.1.1" }
assert_matches = "1.5"
serde_json     = "1.0"
env_logger     = "0.9.0"
test-context   = "0.1.4"
once_cell      = "1.13.0"
serde          = { version = "1.0", default-features = false, features = ["derive"] }
rand           = "0.8"
base-minter = "2.1.0"
base-factory = "2.1.0"
itertools = "0.10.5"