[package]
name       = "unit-tests"
version    = { workspace = true }
edition    = { workspace = true }
repository = { workspace = true }
license    = { workspace = true }

[dependencies]
infinity-swap = { path = "../../contracts/infinity-swap" }
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cosmwasm-storage = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils = { workspace = true }
cw2 = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
sg1 = { workspace = true }
sg2 = { workspace = true }
sg721-base = { workspace = true }
sg721 = { workspace = true }
sg-std = { workspace = true }
sg-marketplace = { workspace = true }
cw721-base = { workspace = true }
cw721 = { workspace = true }


[dev-dependencies]
itertools = "0.10.5"
cw-multi-test = { version = "0.16.0" }
sg-multi-test = "0.21.8"
test-suite = "0.21.8"
vending-minter = { version = "0.21.8"}
vending-factory = { version = "0.21.8"}