[package]
name       = "unit-tests"
version    = { workspace = true }
edition    = { workspace = true }
repository = { workspace = true }
license    = { workspace = true }

[dependencies]
infinity-pool = { workspace = true }
infinity-index = { workspace = true }
infinity-router = { workspace = true }
infinity-shared = { workspace = true }
# infinity-swap = { workspace = true }
# infinity-marketplace-adapter = { workspace = true }
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cosmwasm-storage = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils = { workspace = true }
cw2 = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
sg1 = { workspace = true }
sg2 = { workspace = true }
sg721-base = { workspace = true }
sg721 = { workspace = true }
sg-std = { workspace = true }
sg-marketplace = { workspace = true }
cw721-base = { workspace = true }
cw721 = { workspace = true }


[dev-dependencies]
itertools  = { workspace = true }
cw-multi-test    = { workspace = true }
sg-multi-test    = { workspace = true }
test-suite       = { workspace = true }
vending-minter   = { workspace = true }
vending-factory  = { workspace = true }
mockall          = { workspace = true }
